--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "chai": "^3.4.1",
     "chai-spies": "^0.7.1",
     "mocha": "^2.4.1",
-    "nodemon": "^1.8.1"
+    "nodemon": "^1.8.1",
+    "supertest": "^1.1.0"
   }
 }
