--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "chai": "^3.4.1",
+    "chai-as-promised": "^5.2.0",
     "chai-spies": "^0.7.1",
     "mocha": "^2.4.1",
     "nodemon": "^1.8.1",
